# milvus-lite

./: .clang-format  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  bm25.py  conanfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/setup/: gen_env.sh  setup_dev.sh
.github/workflows/: main.yml  stability.yml  test.yml
_old/milvus/: __init__.py
ci/: e2e.groovy  entrypoint.sh  get_author_email.sh  nightly.groovy  rte-build.yaml  set_docker_mirror.sh  test.sh
cmake/: Findantlr4-runtime.cmake  milvus-storage.cmake
docs/: MVP.md  filter-design.md  fts-design.md  funcchain-design.md  grpc-adapter-design.md  index-design.md  modules.md  roadmap.md  search-iterator-design.md  wal-design.md
examples/: 01-startup.ipynb  bfloat16_example.py  binary_example.py  bm25.py  customize_schema.py  customize_schema_auto_id.py  dynamic_field.py  example.ipynb  example.py  example_group_by.py  float16_example.py  fuzzy_match.py  hello_hybrid_bm25.py  hello_milvus.py  hello_milvus_array.py  hello_milvus_delete.py  index.py  m10_demo.py  m11_scalar_index_demo.py  m2_demo.py  m3_demo.py  m4_demo.py  m5_demo.py  m6_demo.py  m7_demo.py  m8_demo.py  m9_demo.py  non_ascii_encode.py  simple.py  simple_auto_id.py  sparse.py
milvus/: __init__.py  milvus.py  preload.py
milvus/configs/: embedded-milvus.yaml
milvus/lib/: install_deps.sh
milvus_binary/: .gitignore  build.sh  env.sh
milvus_binary/patches/: aws-sdk-1.9.234.patch  knowhere-f4c1757.patch  knowhere-v1.3.11.patch  knowhere-v1.3.15.patch  knowhere-v1.3.16.patch  knowhere-v1.3.19.patch  knowhere-v2.2.2.patch  knowhere-v2.2.3.patch  knowhere-v2.2.4.patch  macosx-v2.2.5.patch  macosx-v2.3.0-beta.patch  milvus-v2.2.5.patch  milvus-v2.2.6.patch  milvus-v2.2.8.patch  msys-v2.2.4.patch
milvus_build_backend/: backend.py
milvus_lite/: __init__.py  __main__.py  _version.py  cmdline.py  constants.py  db.py  exceptions.py  server_manager.py
milvus_lite/adapter/: __init__.py
milvus_lite/analyzer/: __init__.py  factory.py  hash.py  jieba_analyzer.py  protocol.py  sparse.py  standard.py
milvus_lite/embedding/: __init__.py  factory.py  openai_provider.py  protocol.py
milvus_lite/engine/: __init__.py  collection.py  compaction.py  flush.py  operation.py  projection.py  recovery.py
milvus_lite/function/: __init__.py  builder.py  chain.py  compiler.py  dataframe.py  operator.py  repr.py  types.py  validator.py
milvus_lite/index/: __init__.py  brute_force.py  factory.py  faiss_hnsw.py  faiss_hnsw_sq.py  faiss_ivf_flat.py  faiss_ivf_sq8.py  files.py  protocol.py  sparse_inverted.py  spec.py
milvus_lite/rerank/: __init__.py  boost.py  cohere_provider.py  decay.py  factory.py  protocol.py
milvus_lite/schema/: __init__.py  arrow_builder.py  geometry.py  persistence.py  timestamptz.py  types.py  validation.py
milvus_lite/search/: assembler.py  bitmap.py  distance.py  executor.py  executor_indexed.py  indexed_filter.py
milvus_lite/storage/: __init__.py  data_file.py  delta_file.py  delta_index.py  manifest.py  memtable.py  paths.py  segment.py  snapshots.py  wal.py
python/: pyproject.toml  setup.py
scripts/: Dockerfile  Dockerfile.manylinux.aarch64  Dockerfile.manylinux.x86_64  README.md  build.sh  build_local.sh  build_milvus_lite.sh  test_local.sh
scripts/arm64/: Dockerfile
scripts/x86/: Dockerfile
src/: CMakeLists.txt  bm25_stat.h  collection_data.cpp  collection_data.h  collection_meta.cpp  collection_meta.h  common.h  create_collection_task.cpp  create_collection_task.h  create_index_task.cpp  create_index_task.h  delete_task.cpp  delete_task.h  function.h  hybrid_search_task.cpp  hybrid_search_task.h  index.cpp  index.h  insert_task.cpp  insert_task.h  milvus_id.hpp  milvus_local.cpp  milvus_local.h  milvus_proxy.cpp  milvus_proxy.h  milvus_service_impl.cpp  milvus_service_impl.h  query_task.cpp  query_task.h  re_scorer.cpp  re_scorer.h  retrieve_result.h  schema_util.cpp  schema_util.h  search_result.h  search_task.cpp  search_task.h  segcore_wrapper.cpp  segcore_wrapper.h  server.cpp  (+9 more)
src/function/: bm25_function.cpp  bm25_function.h  bm25_stat.h  function.h  function_executor.cpp  function_executor.h  function_util.h
src/milvus/: __init__.py
src/milvus/data/: config.yaml.template  glog.conf
src/parser/: Plan.g4  parser.cc  parser.h  utils.h
src/parser/antlr/: PlanBaseVisitor.cpp  PlanBaseVisitor.h  PlanLexer.cpp  PlanLexer.h  PlanParser.cpp  PlanParser.h  PlanVisitor.cpp  PlanVisitor.h
src/proto/: cgo_msg.proto  common.proto  feder.proto  index_cgo_msg.proto  manifest.proto  milvus.proto  msg.proto  plan.proto  rg.proto  schema.proto  segcore.proto
src/storage/: bm25_stats.cpp  bm25_stats.h  collection_data.cpp  collection_data.h  collection_meta.cpp  collection_meta.h  storage.cpp  storage.h
src/unittest/: CMakeLists.txt  bm25_function_test.cpp  grpc_server_test.cpp  milvus_local_test.cpp  milvus_proxy_test.cpp  nullable_test.cpp  run_examples.py  storage_test.cpp  test_util.cpp  test_util.h
tests/: conftest.py  requirements.txt  test_bm25.py  test_db.py  test_delete.py  test_dump_tool.py  test_hybrid_search.py  test_milvus_config.py  test_nullable.py  test_query.py  test_schema.py  test_search.py  test_smoke_e2e.py  test_snapshots.py  test_sparse.py
tests/adapter/: conftest.py  test_against_milvus.py  test_array_field.py  test_array_milvus.py  test_auto_id.py  test_boost_ranker.py  test_crud_alignment.py  test_crud_alignment_milvus.py  test_dynamic_field_coverage.py  test_function_chain.py  test_group_by.py  test_grpc_collection_lifecycle.py  test_grpc_crud.py  test_grpc_database.py  test_grpc_error_mapping.py  test_grpc_fts.py  test_grpc_geometry.py  test_grpc_index.py  test_grpc_partition_key.py  test_grpc_quickstart.py  test_grpc_search.py  test_grpc_server_startup.py  test_grpc_snapshot.py  test_grpc_timestamptz_milvus_compat.py  test_grpc_translators_records.py  test_grpc_translators_schema.py  test_hybrid_search.py  (+17 more)
tools/: run_upstream_milvus_client_supported.sh
(+227 files in other folders)
