[build-system]
requires = ["setuptools>=64.0"]
build-backend = "backend"
backend-path = ["milvus_build_backend"]

[project]
name = "milvus"
dynamic = ["version"]
license = { file = "LICENSE" }
authors = [
    { name = "Milvus Team", email = "milvus-team@zilliz.com" },
    { name = "Ji Bin", email = "matrixji@live.com" },
]
maintainers = [
    { name = "Yuchen Gao", email = "yuchen.gao@zilliz.com" },
    { name = "Ji Bin", email = "matrixji@live.com" },
]

description = "Embedded Version of Milvus"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Database :: Database Engines/Servers",
]
dependencies = []


[project.urls]
"Homepage" = "https://github.com/milvus-io/embd-milvus"
"Bug Tracker" = "https://github.com/milvus-io/embd-milvus/issues"

[project.optional-dependencies]
client = ["pymilvus>=2.2.0"]

[project.scripts]
milvus-server = "milvus:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"milvus.data" = ["*.yaml.template"]
"milvus.data.bin" = ["*.lzma"]


[tool.setuptools.dynamic]
version = { attr = "milvus.__version__" }
