[metadata]
name = milvus
version = attr: milvus.__version__
author = Milvus Team
author_email = milvus-team@zilliz.com
maintainer = Ji Bin
maintainer_email = matrixji@live.com
description = Embeded Milvus
license = Apache-2.0
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/milvus-io/milvus-lite
keywords = Milvus, Embeded Milvus, Milvus Server

[options]
package_dir =
    = src
include_package_data = True
packages = find_namespace:
python_requires = >=3.6
install_requires =

[options.packages.find]
where = src

[options.package_data]
milvus.data =
    *.template
    *.conf
milvus.data.bin =
    *.lzma

[options.entry_points]
console_scripts =
    milvus-server = milvus:main

[options.extras_require]
client = pymilvus>=2.3.0b1,<2.4.0
